src/tests/function-declarations/5.txt
function-declarations/5.c:0:1: error: no main function defined
 
 ^
function-declarations/5.c:4:1: error: function definition parameters don't match with previous declaration
 int f(int a, float b) {
 ^
